--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Jurandir Ferreira",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.0",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "mssql": "^6.2.1"
