--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "mssql": "^6.2.1"
   },
   "devDependencies": {
+    "fetch": "^1.1.0",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.4"
   }
 }
